Added files via upload

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             </li>
                             <li class="grayBtn"><a href="" id="a3" type="button" onclick="topNavClick(this)">Contact</a></li>
                             <li class="logoBtn">
-                                <a class="toplink" href=""><img class="logo" src="assets/Title%20N%20Go%20Logo%20with%20Tageline_Silver,%20Black%20and%20Red.jpg"></a>
+                                <a class="toplink" href=""><img class="logo" src="assets/logo.jpg"></a>
                             </li>
                             <li class="loginBtn">
                                 <a id="a4" href="" onClick="myFunc(this.id);">Login <i class="fa fa-arrow-right"></i></a>
