Added files via upload

--- a/index-new.html
+++ b/index-new.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <link href="assets/main-new.css" type="text/css" rel="stylesheet">
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
     <title>TitleNGo for Electronic Titling and Online Messenger Services</title>
     <meta name="Description" content="TitleNGo (formerly Pa Messenger Solutions, Inc) provides online vehicular titling and registration services to messengers, car dealers, and notary businesses in Pennsylvania.  As an approved PennDOT Business Partner, TitleNGo’s software provides easy to use electronic access into PennDOT’s vehicle titling and registration services.">
     <meta name="Keywords" content="Online titling, vehicle titling, PennDOT, On Line Registration Program (OLRP), On Line Messenger (OLM), Harrisburg, Pennsylvania, PAMS, PA Messenger Solutions, Inc., web-based, registration card,  registration sticker, customer support, vehicle registration services, TitleNGo Business Portal, Gatekeeper, PennDOT Business Partner, green screen, Integrator">
@@ -24,7 +24,7 @@
                     <div class="container text-xs-center p-a-0">
                         <button type="button" class="btn navbar-toggle pull-right hidden-md-up">
                             <span class="sr-only">Toggle navigation</span>
-                            <span class="fa fa-bars"></span>
+                            <i class="fa fa-bars"></i>
 
                         </button>
 
