Added files via upload

--- a/index-new.html
+++ b/index-new.html
@@ -8,6 +8,7 @@
     <link href="assets/main-new.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
     <title>TitleNGo for Electronic Titling and Online Messenger Services</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="TitleNGo (formerly Pa Messenger Solutions, Inc) provides online vehicular titling and registration services to messengers, car dealers, and notary businesses in Pennsylvania.  As an approved PennDOT Business Partner, TitleNGo’s software provides easy to use electronic access into PennDOT’s vehicle titling and registration services.">
     <meta name="Keywords" content="Online titling, vehicle titling, PennDOT, On Line Registration Program (OLRP), On Line Messenger (OLM), Harrisburg, Pennsylvania, PAMS, PA Messenger Solutions, Inc., web-based, registration card,  registration sticker, customer support, vehicle registration services, TitleNGo Business Portal, Gatekeeper, PennDOT Business Partner, green screen, Integrator">
     <script src="https://code.jquery.com/jquery-1.12.1.min.js"></script>
