--- a/index-new.html
+++ b/index-new.html
@@ -23,70 +23,88 @@
                 <img id="bannerImg" src="assets/titlengo_home-banner-wide.jpeg" class="bg">
                 <div class="nav-container">
                     <div class="container text-xs-center p-a-0">
-                        <button type="button" class="btn navbar-toggle pull-right hidden-md-up">
-                            <span class="sr-only">Toggle navigation</span>
-                            <i class="fa fa-bars"></i>
+                        <div id="topNavContainer">
+                            <ul class="topnav">
+                                <li class="grayBtn">
+                                    <a class="toplink" id="a1" type="button">How it works<i class="fa fa-arrow-down" ></i></a>
+                                    <ul class="subnav">
+                                        <li class="active"><a class="sublink" href="sales.html">Sales <i class="fa fa-arrow-right" ></i></a></li>
+                                        <li><a href="" class="sublink">Services</a></li>
+                                        <li><a href="" class="sublink">Pricing</a></li>
+                                        <li><a href="" class="sublink">Apply Now</a></li>
 
-                        </button>
-
-
-
-                        <ul class="topnav">
-                            <li class="grayBtn">
-                                <a class="toplink" id="a1" type="button">How it works<i class="fa fa-arrow-down" ></i></a>
-                                <ul class="subnav">
-                                    <li class="active"><a class="sublink" href="sales.html">Sales <i class="fa fa-arrow-right" ></i></a></li>
-                                    <li><a href="" class="sublink">Services</a></li>
-                                    <li><a href="" class="sublink">Pricing</a></li>
-                                    <li><a href="" class="sublink">Apply Now</a></li>
-
-                                </ul>
-                            </li>
-                            <li class="grayBtn">
-                                <a class="toplink" id="a2">About Us <i class="fa fa-arrow-down"></i></a>
-                            </li>
-                            <li class="grayBtn"><a href="" id="a3" type="button" onclick="topNavClick(this)">Contact</a></li>
-                            <li class="logoBtn">
-                                <a class="toplink" href=""><img class="logo" src="assets/logo.jpg"></a>
-                            </li>
-                            <li class="loginBtn">
-                                <a id="a4" href="" onClick="myFunc(this.id);">Login <i class="fa fa-arrow-right"></i></a>
-                            </li>
-                            <li class="blueBtn"><a href="">Go Title</a></li>
-                            <li class="blueBtn"><a href="">Go</a></li>
-                            <li class="blueBtn"><a href="">DOT</a></li>
-                            <li class="blueBtn"><a href="">Corporate</a></li>
-                        </ul>
-
-                        <div class="row hidden-md-up" id="bs-example-navbar-collapse-1">
-                            <div class="col-xs-12">
-                                <ul class="nav nav-pills">
-                                    <li class="nav-item">
-                                        <a class="nav-link active" href="#">Sales</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link active" href="#">Services</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link active" href="#">Pricing</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link active" href="#">Apply Now</a>
-                                    </li>
-                                </ul>
-
-
+                                    </ul>
+                                </li>
+                                <li class="grayBtn">
+                                    <a class="toplink" id="a2">About Us <i class="fa fa-arrow-down"></i></a>
+                                </li>
+                                <li class="grayBtn"><a href="" id="a3" type="button" onclick="topNavClick(this)">Contact</a></li>
+                                <li class="logoBtn">
+                                    <a class="toplink" href=""><img class="logo" src="assets/logo.jpg"></a>
+                                </li>
+                                <li class="loginBtn">
+                                    <a id="a4" href="" onClick="myFunc(this.id);">Login <i class="fa fa-arrow-right"></i></a>
+                                </li>
+                                <li class="blueBtn"><a href="">Go Title</a></li>
+                                <li class="blueBtn"><a href="">Go</a></li>
+                                <li class="blueBtn"><a href="">DOT</a></li>
+                                <li class="blueBtn"><a href="">Corporate</a></li>
+                            </ul>
+                            <div id="bannerText"><span class="transparentBox">
+                            <span class="title">Focus on the drive.</span>
+                                <span class="subTitle">Not the paperwork.</span></span>
                             </div>
                         </div>
-                        <div id="bannerText"><span class="transparentBox">
-                            <span class="title">Focus on the drive.</span>
-
-
-
-                            <span class="subTitle">Not the paperwork.</span></span>
-                        </div>
                     </div>
+                    <div class="container">
+                        <div class="hidden-md-up">
+                            <div class="row">
+                                <div class="col-xs-11">
+                                    <a class="logoBtn" href=""><img class="logo" src="assets/logo.jpg"></a>
+                                </div>
+                                <div class="col-xs-1">
+                                    <button type="button" class="btn navbar-toggle pull-right hidden-md-up">
+                                        <span class="sr-only">Toggle navigation</span>
+                                        <i class="fa fa-bars"></i>
 
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="row text-xs-center " id="bs-example-navbar-collapse-1">
+                                <div class="col-xs-12">
+                                    <ul class="smallnav">
+
+                                        <li><a href="">Go Title</a></li>
+                                        <li><a href="">Go</a></li>
+                                        <li><a href="">DOT</a></li>
+                                        <li><a href="">Corporate</a></li>
+                                    </ul>
+                                    <ul class="smallnav">
+                                        <li>
+                                            <a class="toplink" id="a1" type="button">How it works<i class="fa fa-arrow-down" ></i></a>
+                                            <ul class="subnav">
+                                                <li class="active"><a class="sublink" href="sales.html">Sales <i class="fa fa-arrow-right" ></i></a></li>
+                                                <li><a href="" class="sublink">Services</a></li>
+                                                <li><a href="" class="sublink">Pricing</a></li>
+                                                <li><a href="" class="sublink">Apply Now</a></li>
+
+                                            </ul>
+                                        </li>
+                                        <li class="grayBtn">
+                                            <a class="toplink" id="a2">About Us <i class="fa fa-arrow-down"></i></a>
+                                        </li>
+                                        <li class="grayBtn"><a href="" id="a3" type="button" onclick="topNavClick(this)">Contact</a></li>
+                                    </ul>
+
+
+
+
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
                 </div>
             </div>
             <div id="container" class="container m-t-2">
@@ -182,8 +200,25 @@
         $('.header').css("height", "200px");
         $('#bannerText').hide();
     });
+    $('.smallnav li a').on('click', function() {
+        // Reset the active class from siblings
+        // Clear the sub link selection when the top link is not active
+        // Add class to the parent li for every link
+        // Add active to the first sibling
+        $(this).parent()
+            .siblings('.active').removeClass('active').end()
+            .find('> .subnav li.active').removeClass('active').end()
+            .addClass('active')
+            .find('> .subnav li:first').addClass('active');
+
+    });
+    $('#bs-example-navbar-collapse-1').hide();
     $('.navbar-toggle').click(function() {
         $('#bs-example-navbar-collapse-1').toggle();
+        $('img.bg').toggleClass('largeImg');
+        $('.header').toggleClass('largeHeader');
+
+
     })
 
 </script>
