--- a/index-new.html
+++ b/index-new.html
@@ -59,10 +59,10 @@
                     <div class="container">
                         <div class="hidden-md-up">
                             <div class="row">
-                                <div class="col-xs-11">
+                                <div class="col-xs-10">
                                     <a class="logoBtn" href=""><img class="logo" src="assets/logo.jpg"></a>
                                 </div>
-                                <div class="col-xs-1">
+                                <div class="col-xs-2">
                                     <button type="button" class="btn navbar-toggle pull-right hidden-md-up">
                                         <span class="sr-only">Toggle navigation</span>
                                         <i class="fa fa-bars"></i>
@@ -70,7 +70,7 @@
                                     </button>
                                 </div>
                             </div>
-                            <div class="row text-xs-center " id="bs-example-navbar-collapse-1">
+                            <div class="row text-xs-center " id="collapsible-nav">
                                 <div class="col-xs-12">
                                     <ul class="smallnav">
 
@@ -201,10 +201,6 @@
         $('#bannerText').hide();
     });
     $('.smallnav li a').on('click', function() {
-        // Reset the active class from siblings
-        // Clear the sub link selection when the top link is not active
-        // Add class to the parent li for every link
-        // Add active to the first sibling
         $(this).parent()
             .siblings('.active').removeClass('active').end()
             .find('> .subnav li.active').removeClass('active').end()
@@ -212,9 +208,9 @@
             .find('> .subnav li:first').addClass('active');
 
     });
-    $('#bs-example-navbar-collapse-1').hide();
+    $('#collapsible-nav').hide();
     $('.navbar-toggle').click(function() {
-        $('#bs-example-navbar-collapse-1').toggle();
+        $('#collapsible-nav').toggle();
         $('img.bg').toggleClass('largeImg');
         $('.header').toggleClass('largeHeader');
 
