Added files via upload

--- a/index-new.html
+++ b/index-new.html
@@ -63,7 +63,7 @@
                                     <a class="logoBtn" href=""><img class="logo" src="assets/logo.jpg"></a>
                                 </div>
                                 <div class="col-xs-2">
-                                    <button type="button" class="btn navbar-toggle pull-right hidden-md-up">
+                                    <button type="button" class="btn btn-default navbar-toggle hidden-md-up">
                                         <span class="sr-only">Toggle navigation</span>
                                         <i class="fa fa-bars"></i>
 
