--- a/pricing.html
+++ b/pricing.html
@@ -28,9 +28,9 @@
                                 <li class="grayBtn active">
                                     <a type="button" href="sales.html">How it works<i class="fa fa-arrow-down" ></i></a>
                                     <ul class="subnav">
-                                        <li class="active"><a class="sublink" href="sales.html">Sales <i class="fa fa-arrow-right" ></i></a></li>
+                                        <li><a class="sublink" href="sales.html">Sales <i class="fa fa-arrow-right" ></i></a></li>
                                         <li><a href="services.html" class="sublink">Services <i class="fa fa-arrow-right" ></i></a></li>
-                                        <li><a href="pricing.html" class="sublink">Pricing <i class="fa fa-arrow-right" ></i></a></li>
+                                        <li class="active"><a href="pricing.html" class="sublink">Pricing <i class="fa fa-arrow-right" ></i></a></li>
                                         <li><a href="applyNow.html" class="sublink">Apply Now <i class="fa fa-arrow-right" ></i></a></li>
 
                                     </ul>
@@ -41,7 +41,7 @@
                                         <li class="active"><a class="sublink" href="company.html">Company <i class="fa fa-arrow-right" ></i></a></li>
                                         <li><a href="faqs.html" class="sublink">FAQs <i class="fa fa-arrow-right" ></i></a></li>
                                         <li><a href="partners.html" class="sublink">Partners <i class="fa fa-arrow-right" ></i></a></li>
-                                     </ul>
+                                    </ul>
                                 </li>
                                 <li class="grayBtn"><a href="contact.html" type="button">Contact<i class="fa fa-arrow-right" ></i></a></li>
                                 <li class="logoBtn">
@@ -50,21 +50,21 @@
                                 <li class="loginBtn">
                                     <a id="a4" href="login.html">Login <i class="fa fa-arrow-right"></i></a>
                                 </li>
-                               <li class="blueBtn"><a href="goTitle.html">Go Title <i class="fa fa-arrow-down" ></i></a></li>
+                                <li class="blueBtn"><a href="goTitle.html">Go Title <i class="fa fa-arrow-down" ></i></a></li>
                                 <li class="blueBtn"><a href="go.html">Go <i class="fa fa-arrow-down" ></i></a></li>
                                 <li class="blueBtn"><a href="dot.html">DOT <i class="fa fa-arrow-down" ></i></a></li>
                                 <li class="blueBtn"><a href="corporate.html">Corporate <i class="fa fa-arrow-down" ></i></a></li>
-                             </ul>
-                            <div id="bannerText" ><span class="transparentBox">
+                            </ul>
+                            <div id="bannerText"><span class="transparentBox">
                             <span class="title">Focus on the drive.</span>
                                 <span class="subTitle">Not the paperwork.</span></span>
                             </div>
                         </div>
 
-                        <div class="hidden-md-up m-l-1">
+                        <div class="hidden-md-up">
                             <div class="row">
                                 <div class="col-xs-10">
-                                    <a class="logoBtn" href="index.html"><img class="logo" src="assets/logo.jpg"></a>
+                                    <a class="logoBtn" href=""><img class="logo" src="assets/logo.jpg"></a>
                                 </div>
                                 <div class="col-xs-2">
                                     <button type="button" class="btn btn-secondary navbar-toggle hidden-md-up">
@@ -84,13 +84,13 @@
                                         <li><a href="corporate.html">Corporate</a></li>
                                     </ul>
                                     <ul class="smallnav">
-                                        <li class="active">
+                                        <li>
                                             <a type="button" href="sales.html">How it works<i class="fa fa-arrow-down" ></i></a>
                                             <ul class="subnav">
-                                                <li class="active"><a class="sublink" href="sales.html">Sales <i class="fa fa-arrow-right" ></i></a></li>
-                                                <li><a href="services.html" class="sublink">Services</a></li>
-                                                <li><a href="pricing.html" class="sublink">Pricing</a></li>
-                                                <li><a href="applyNow.html" class="sublink">Apply Now</a></li>
+                                                <li><a class="sublink" href="sales.html">Sales <i class="fa fa-arrow-right" ></i></a></li>
+                                                <li><a href="services.html" class="sublink">Services <i class="fa fa-arrow-right" ></i></a></li>
+                                                <li class="active"><a href="pricing.html" class="sublink">Pricing <i class="fa fa-arrow-right" ></i></a></li>
+                                                <li><a href="applyNow.html" class="sublink">Apply Now <i class="fa fa-arrow-right" ></i></a></li>
 
                                             </ul>
                                         </li>
@@ -98,8 +98,8 @@
                                             <a href="aboutUs.html">About Us <i class="fa fa-arrow-down"></i></a>
                                             <ul class="subnav">
                                                 <li class="active"><a class="sublink" href="company.html">Company <i class="fa fa-arrow-right" ></i></a></li>
-                                                <li><a href="faqs.html" class="sublink">FAQs</a></li>
-                                                <li><a href="partners.html" class="sublink">Partners</a></li>
+                                                <li><a href="faqs.html" class="sublink">FAQs <i class="fa fa-arrow-right" ></i></a></li>
+                                                <li><a href="partners.html" class="sublink">Partners <i class="fa fa-arrow-right" ></i></a></li>
                                             </ul>
                                         </li>
                                         <li><a href="contact.html" type="button">Contact</a></li>
@@ -124,19 +124,33 @@
                             <div class="card-block">
                                 <div class="row">
                                     <div class="col-xs-12">
-                                        <h2>Less waiting, more selling</h2></div>
+                                        <h2>Pricing for TitleNGo OLRP and OLM</h2></div>
                                     <div class="col-xs-12">
-                                        <div class="pull-right" style="width: 50%; height: 100px; border: 1px solid #333;">Placeholder</div>
-                                        <p>PennDOT offers two partner programs, the Online Registration Program (OLRP) and the Online Messenger program (OLM). TitleNGo offers both. We offer a Windows software package for electronic titling (OLRP) and we are a network integrator for online messengers (OLM).</p>
+                                        <div class="pull-right" style="width: 50%; height: 200px; border: 1px solid #333;">Placeholder</div>
+
+
+                                        <h3>Electronic Titlig (OLRP) Pricing</h3>
                                         <p>
 
-                                            Imagine your customers walking out of your office with their new registration card and sticker. Instead of submitting paperwork to PennDOT and waiting weeks, imagine that titles are printed two days after you do the deal. (OLRP) Imagine someone comes in to transfer a vehicle title, but their address is wrong on their driver's license. Imagine being able to update their address, printing an address change card and proceeding with the deal. (OLM) All this is possible.</p>
+                                            Your costs for the OLRP program are based on the number of transactions you do. You can choose a program that is based only on those transaction fees. Those who do a high volume of transactions can choose a tiered pricing program with lower transaction fees and pay a monthly connectivity fee.</p>
                                         <p>
 
-                                            We utilize high-speed Internet providers such as Comcast and Verizon to communicate with our data centers. You choose your provider based on availability and cost. We work with them to get you connected. A whole world of opportunity opens up to you.</p>
+                                            Messengers can do dealer titles and wholesale work for reduced fees.</p>
                                         <p>
 
-                                            Take a look at Services and Pricing information for more detail. Click the button below for more information.</p>
+                                            TitleNGo was founded by business people like you. Our pricing structure is aggressive. This allows you to offer competitive pricing while also generating healthy income for your business.
+                                        </p>
+                                        <p>
+                                            In an effort to minimize your financial risk, TitleNGo has entered into a strategic partnership with First Data / Telecheck. We offer you the option to utilize this industry leading solution for the risk posed by ‘bad checks’.</p>
+                                        <h3>
+ 
+                                        Online Messenger (OLM) Pricing</h3>
+                                        <p>
+
+                                            Your cost for the OLM program is a basic monthly connectivity fee. There are no other ongoing charges. Those who partner with TitleNGo for both the OLM and OLRP programs will have one of the monthly connectivity fees waived.</p>
+
+
+
                                         <div class="m-t-2">
                                             <button class="btn btn-success">Request Information</button>
                                         </div>
