--- a/services.html
+++ b/services.html
@@ -26,10 +26,10 @@
                         <div id="topNavContainer">
                             <ul class="topnav">
                                 <li class="grayBtn active">
-                                    <a type="button" href="sales.html">How it works<i class="fa fa-arrow-down" ></i></a>
+                                    <a type="button" href="sales.html">How it works <i class="fa fa-arrow-down" ></i></a>
                                     <ul class="subnav">
-                                        <li class="active"><a class="sublink" href="sales.html">Sales <i class="fa fa-arrow-right" ></i></a></li>
-                                        <li><a href="services.html" class="sublink">Services <i class="fa fa-arrow-right" ></i></a></li>
+                                        <li><a class="sublink" href="sales.html">Sales <i class="fa fa-arrow-right" ></i></a></li>
+                                        <li class="active"><a href="services.html" class="sublink">Services <i class="fa fa-arrow-right" ></i></a></li>
                                         <li><a href="pricing.html" class="sublink">Pricing <i class="fa fa-arrow-right" ></i></a></li>
                                         <li><a href="applyNow.html" class="sublink">Apply Now <i class="fa fa-arrow-right" ></i></a></li>
 
@@ -41,30 +41,30 @@
                                         <li class="active"><a class="sublink" href="company.html">Company <i class="fa fa-arrow-right" ></i></a></li>
                                         <li><a href="faqs.html" class="sublink">FAQs <i class="fa fa-arrow-right" ></i></a></li>
                                         <li><a href="partners.html" class="sublink">Partners <i class="fa fa-arrow-right" ></i></a></li>
-                                     </ul>
+                                    </ul>
                                 </li>
-                                <li class="grayBtn"><a href="contact.html" type="button">Contact<i class="fa fa-arrow-right" ></i></a></li>
+                                <li class="grayBtn"><a href="contact.html" type="button">Contact <i class="fa fa-arrow-down" ></i></a></li>
                                 <li class="logoBtn">
                                     <a href="index.html"><img class="logo" src="assets/logo.jpg"></a>
                                 </li>
                                 <li class="loginBtn">
                                     <a id="a4" href="login.html">Login <i class="fa fa-arrow-right"></i></a>
                                 </li>
-                               <li class="blueBtn"><a href="goTitle.html">Go Title <i class="fa fa-arrow-down" ></i></a></li>
-                                <li class="blueBtn"><a href="go.html">Go <i class="fa fa-arrow-down" ></i></a></li>
-                                <li class="blueBtn"><a href="dot.html">DOT <i class="fa fa-arrow-down" ></i></a></li>
-                                <li class="blueBtn"><a href="corporate.html">Corporate <i class="fa fa-arrow-down" ></i></a></li>
-                             </ul>
-                            <div id="bannerText" ><span class="transparentBox">
+                                <li class="blueBtn"><a href="goTitle.html">Go Title <i class="fa fa-arrow-right" ></i></a></li>
+                                <li class="blueBtn"><a href="go.html">Go <i class="fa fa-arrow-right" ></i></a></li>
+                                <li class="blueBtn"><a href="dot.html">DOT <i class="fa fa-arrow-right" ></i></a></li>
+                                <li class="blueBtn"><a href="corporate.html">Corporate <i class="fa fa-arrow-right" ></i></a></li>
+                            </ul>
+                            <div id="bannerText"><span class="transparentBox">
                             <span class="title">Focus on the drive.</span>
                                 <span class="subTitle">Not the paperwork.</span></span>
                             </div>
                         </div>
 
-                        <div class="hidden-md-up m-l-1">
+                        <div class="hidden-md-up">
                             <div class="row">
                                 <div class="col-xs-10">
-                                    <a class="logoBtn" href="index.html"><img class="logo" src="assets/logo.jpg"></a>
+                                    <a class="logoBtn" href=""><img class="logo" src="assets/logo.jpg"></a>
                                 </div>
                                 <div class="col-xs-2">
                                     <button type="button" class="btn btn-secondary navbar-toggle hidden-md-up">
@@ -78,31 +78,31 @@
                                 <div class="col-xs-12">
                                     <ul class="smallnav">
 
-                                        <li><a href="goTitle.html">Go Title</a></li>
-                                        <li><a href="go.html">Go</a></li>
-                                        <li><a href="dot.html">DOT</a></li>
-                                        <li><a href="corporate.html">Corporate</a></li>
+                                        <li><a href="goTitle.html">Go Title <i class="fa fa-arrow-down" ></i></a></li>
+                                        <li><a href="go.html">Go <i class="fa fa-arrow-down" ></i></a></li>
+                                        <li><a href="dot.html">DOT <i class="fa fa-arrow-down" ></i></a></li>
+                                        <li><a href="corporate.html">Corporate <i class="fa fa-arrow-down" ></i></a></li>
                                     </ul>
                                     <ul class="smallnav">
                                         <li class="active">
                                             <a type="button" href="sales.html">How it works<i class="fa fa-arrow-down" ></i></a>
                                             <ul class="subnav">
-                                                <li class="active"><a class="sublink" href="sales.html">Sales <i class="fa fa-arrow-right" ></i></a></li>
-                                                <li><a href="services.html" class="sublink">Services</a></li>
-                                                <li><a href="pricing.html" class="sublink">Pricing</a></li>
-                                                <li><a href="applyNow.html" class="sublink">Apply Now</a></li>
+                                                <li><a class="sublink" href="sales.html">Sales </a></li>
+                                                <li class="active"><a href="services.html" class="sublink">Services <i class="fa fa-arrow-right" ></i></a></li>
+                                                <li><a href="pricing.html" class="sublink">Pricing </a></li>
+                                                <li><a href="applyNow.html" class="sublink">Apply Now </a></li>
 
                                             </ul>
                                         </li>
                                         <li>
                                             <a href="aboutUs.html">About Us <i class="fa fa-arrow-down"></i></a>
                                             <ul class="subnav">
-                                                <li class="active"><a class="sublink" href="company.html">Company <i class="fa fa-arrow-right" ></i></a></li>
-                                                <li><a href="faqs.html" class="sublink">FAQs</a></li>
-                                                <li><a href="partners.html" class="sublink">Partners</a></li>
+                                                <li class="active"><a class="sublink" href="company.html">Company </a></li>
+                                                <li><a href="faqs.html" class="sublink">FAQs </a></li>
+                                                <li><a href="partners.html" class="sublink">Partners </a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="contact.html" type="button">Contact</a></li>
+                                        <li><a href="contact.html" type="button">Contact <i class="fa fa-arrow-down" ></i></a></li>
                                     </ul>
 
 
@@ -123,25 +123,44 @@
 
                             <div class="card-block">
                                 <div class="row">
-                                    <div class="col-xs-12">
-                                        <h2>Less waiting, more selling</h2></div>
-                                    <div class="col-xs-12">
-                                        <div class="pull-right" style="width: 50%; height: 100px; border: 1px solid #333;">Placeholder</div>
-                                        <p>PennDOT offers two partner programs, the Online Registration Program (OLRP) and the Online Messenger program (OLM). TitleNGo offers both. We offer a Windows software package for electronic titling (OLRP) and we are a network integrator for online messengers (OLM).</p>
-                                        <p>
 
-                                            Imagine your customers walking out of your office with their new registration card and sticker. Instead of submitting paperwork to PennDOT and waiting weeks, imagine that titles are printed two days after you do the deal. (OLRP) Imagine someone comes in to transfer a vehicle title, but their address is wrong on their driver's license. Imagine being able to update their address, printing an address change card and proceeding with the deal. (OLM) All this is possible.</p>
-                                        <p>
+                                    <div class="col-md-6">
+                                        <h2>OLRP Services</h2>
+                                        <p>TitleNGo provides you with all the titling and registration services that PennDOT has made available to its partners. In turn you can offer these services to your customers. With our software solutions, you can do all these things.</p>
+                                        <ul>
+                                            <li>Title Transfers - PA and out-of-state vehicles, new vehicles, reconstructed titles</li>
+                                            <li>Vehicle Types - Automobiles, trucks, trailers, motorcycles, truck tractors, etc.</li>
+                                            <li>Registration Renewals</li>
+                                            <li>Add/Delete Liens</li>
+                                            <li>Add/Delete Leases</li>
+                                            <li>Change Name and Address</li>
 
-                                            We utilize high-speed Internet providers such as Comcast and Verizon to communicate with our data centers. You choose your provider based on availability and cost. We work with them to get you connected. A whole world of opportunity opens up to you.</p>
-                                        <p>
 
-                                            Take a look at Services and Pricing information for more detail. Click the button below for more information.</p>
-                                        <div class="m-t-2">
-                                            <button class="btn btn-success">Request Information</button>
-                                        </div>
+                                            <li>Reissues</li>
+                                            <li>
+                                                Paid and Unpaid Inquiries</li>
+                                            <li>
+                                                One-button ELT processing</li>
+                                        </ul>
+                                        <p> Forms that need to be printed on SA-2 paper print automatically. Everything else prints on plain paper. For messengers we can do dealer titles and wholesale work.</p>
+
                                     </div>
+                                    <div class="col-md-6">
+                                        <h2>OLM Services</h2>
+                                        <p>TitleNGo offers all VR (vehicle registration) and DL (driver license) functionality made available by PennDOT. With our terminal emulation solution you see the same screens that PennDOT employees would see for:</p>
+                                        <ul>
 
+                                            <li>Registration Renewals</li>
+                                            <li>
+                                                Driver License Address Changes</li>
+                                        </ul>
+                                        <p>
+
+                                            Forms that need to be printed on SA-2 paper print automatically. Everything else prints on plain paper.</p>
+                                    </div>
+                                    <div class="col-md-12">
+                                        <button class="btn btn-success">Request Information</button>
+                                    </div>
                                 </div>
 
                             </div>
